# docs/swagger.json
@@ -214,6 +214,30 @@
                 }
             }
         },
+        "/user/logout": {
+            "delete": {
+                "tags": [
+                    "UserModule"
+                ],
+                "summary": "user login",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "userID",
+                        "name": "userID",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/updateuser": {
             "post": {
                 "consumes": [
